[gd_scene load_steps=11 format=3 uid="uid://cktgoqxrvgsh0"]

[ext_resource type="Material" uid="uid://b863l3lxgsu55" path="res://Resources/Shaders/palette_swap_material.tres" id="1_r7vxp"]
[ext_resource type="Theme" uid="uid://cqtq1r7jcjsec" path="res://Resources/Themes/mini_diagram.tres" id="2_nuwiv"]
[ext_resource type="Texture2D" uid="uid://cavdk0v6brl1q" path="res://Textures/UI/MiniDiagram/mini_tile.png" id="3_5t171"]
[ext_resource type="Script" path="res://Scenes and Scripts/UI/MiniDiagram/mini_diagram.gd" id="3_j7ln7"]
[ext_resource type="PackedScene" uid="uid://cdiq8shpyh5bd" path="res://Scenes and Scripts/UI/MiniDiagram/mini_interaction.tscn" id="4_270y2"]
[ext_resource type="Texture2D" uid="uid://bnokrsnuhk2qo" path="res://Textures/UI/MiniDiagram/Outline.png" id="4_xbcsr"]
[ext_resource type="Texture2D" uid="uid://5kfhodkoc3m0" path="res://Textures/UI/MiniDiagram/mini_stateline.png" id="5_q0inb"]
[ext_resource type="PackedScene" uid="uid://bk8xjrcxummfx" path="res://Scenes and Scripts/UI/MiniDiagram/mini_particle_line.tscn" id="6_8pfk1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0vhit"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a4pjj"]

[node name="MiniDiagram" type="Panel"]
material = ExtResource("1_r7vxp")
custom_minimum_size = Vector2(230, 128)
offset_right = 230.0
offset_bottom = 128.0
mouse_filter = 2
theme = ExtResource("2_nuwiv")
theme_override_styles/panel = SubResource("StyleBoxEmpty_0vhit")
script = ExtResource("3_j7ln7")
grid_size = 8
InteractionInstance = ExtResource("4_270y2")
Line = ExtResource("6_8pfk1")

[node name="GridContainer" type="Panel" parent="."]
use_parent_material = true
clip_contents = true
layout_mode = 2
offset_left = 2.0
offset_top = 2.0
offset_right = 229.0
offset_bottom = 126.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_a4pjj")

[node name="Grid" type="TextureRect" parent="GridContainer"]
use_parent_material = true
layout_mode = 2
offset_left = -7.0
offset_top = -2.0
offset_right = 233.0
offset_bottom = 126.0
mouse_filter = 2
texture = ExtResource("3_5t171")
stretch_mode = 1

[node name="GridOutline" type="NinePatchRect" parent="."]
use_parent_material = true
layout_mode = 2
offset_right = 230.0
offset_bottom = 128.0
texture = ExtResource("4_xbcsr")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="DiagramArea" type="Control" parent="."]
use_parent_material = true
anchors_preset = 0
offset_left = 35.0
offset_right = 75.0
offset_bottom = 40.0

[node name="Initial" type="Control" parent="DiagramArea"]
use_parent_material = true
layout_mode = 2
anchors_preset = 0
offset_bottom = 128.0
mouse_filter = 2

[node name="Line" type="VBoxContainer" parent="DiagramArea/Initial"]
use_parent_material = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_right = 1.0
offset_bottom = 127.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Middle" type="TextureRect" parent="DiagramArea/Initial/Line"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("5_q0inb")
stretch_mode = 1

[node name="Final" type="Control" parent="DiagramArea"]
use_parent_material = true
layout_mode = 3
anchors_preset = 0
offset_left = 160.0
offset_right = 160.0
offset_bottom = 128.0
mouse_filter = 2

[node name="Line" type="VBoxContainer" parent="DiagramArea/Final"]
use_parent_material = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_right = 1.0
offset_bottom = 126.0
grow_horizontal = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Middle" type="TextureRect" parent="DiagramArea/Final/Line"]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
mouse_filter = 2
texture = ExtResource("5_q0inb")
stretch_mode = 1

[node name="ParticleLines" type="Control" parent="DiagramArea"]
layout_mode = 2
anchors_preset = 0
mouse_filter = 2

[node name="Interactions" type="Control" parent="DiagramArea"]
layout_mode = 2
anchors_preset = 0
offset_left = -2.0
offset_top = -2.0
offset_right = -2.0
offset_bottom = -2.0
mouse_filter = 2

[node name="HadronJoints" type="Control" parent="DiagramArea"]
anchors_preset = 0
offset_left = -2.0
offset_top = -2.0
offset_right = -2.0
offset_bottom = -2.0
